--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.activado{
+  font-weight: bold;
+  color: rgb(3, 75, 99);
+  text-decoration: none;
+  font-size: 18px;
+}
